[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/GameUI/fonts/custom/large_font.res" type="BitmapFont" id=1]
[ext_resource path="res://GameUI/MenuElements/resources/dudelings_ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://GameUI/Menus/SubMenus/WhatsNewSubMenu/whats_new_sub_menu.gd" type="Script" id=3]
[ext_resource path="res://GameUI/Menus/SubMenus/sub_menu_background_panel.gd" type="Script" id=4]
[ext_resource path="res://main_ui_theme.tres" type="Theme" id=5]
[ext_resource path="res://GameUI/fonts/main_font_bold_32.tres" type="DynamicFont" id=6]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_backdrop_stylebox.tres" type="StyleBox" id=7]
[ext_resource path="res://GameUI/Menus/SubMenus/resources/sub_menu_background_panel_stylebox.tres" type="StyleBox" id=8]
[ext_resource path="res://GameUI/Menus/SubMenus/WhatsNewSubMenu/container.gd" type="Script" id=11]
[ext_resource path="res://Assets/GameUI/art/controller_buttons.png" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.745098 )
skew = Vector2( 0.25, 0 )
expand_margin_left = 15.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.737255, 0.737255, 0.737255, 0.27451 )
skew = Vector2( 0.25, 0 )
expand_margin_left = 15.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
skew = Vector2( 0.25, 0 )
expand_margin_left = 15.0
expand_margin_right = 10.0

[sub_resource type="Theme" id=3]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0, 0.0470588, 0.301961, 1 )
Button/colors/font_color_pressed = Color( 0, 0.0470588, 0.301961, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="Theme" id=7]

[node name="WhatsNewSubMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
custom_styles/panel = ExtResource( 7 )
script = ExtResource( 3 )

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -240.0
margin_right = 500.0
margin_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1000, 450 )
custom_styles/panel = ExtResource( 8 )
script = ExtResource( 4 )

[node name="ButtonOptions" type="Control" parent="BackgroundPanel"]
anchor_left = -0.013
anchor_top = -0.24
anchor_right = 1.014
anchor_bottom = -0.048
margin_right = -6.10352e-05

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundPanel/ButtonOptions"]
anchor_left = 0.048
anchor_top = 0.281
anchor_right = 0.945
anchor_bottom = 0.771
margin_left = -0.296001
margin_top = 0.0239983
margin_right = 0.484924
margin_bottom = -0.0160065
theme = SubResource( 3 )
custom_constants/separation = 40
script = ExtResource( 11 )

[node name="WhatsNew" type="Button" parent="BackgroundPanel/ButtonOptions/HBoxContainer"]
margin_right = 138.0
margin_bottom = 47.0
toggle_mode = true
pressed = true
text = "What's New"

[node name="AnnouncementRight" type="Sprite" parent="BackgroundPanel/ButtonOptions"]
position = Vector2( 0, 45 )
texture = ExtResource( 12 )
hframes = 14
vframes = 4
frame = 22

[node name="AnnouncementLeft" type="Sprite" parent="BackgroundPanel/ButtonOptions"]
position = Vector2( 1009, 45 )
texture = ExtResource( 12 )
hframes = 14
vframes = 4
frame = 23

[node name="MenuContainer" type="VBoxContainer" parent="BackgroundPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10
alignment = 1

[node name="HeaderLabel" type="Label" parent="BackgroundPanel/MenuContainer"]
margin_right = 1000.0
margin_bottom = 40.0
grow_horizontal = 2
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "WHAT'S NEW IN (version)"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPanel/MenuContainer"]
margin_top = 50.0
margin_right = 1000.0
margin_bottom = 500.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/MenuContainer/ScrollContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 974.0
margin_bottom = 1111.0
size_flags_horizontal = 3

[node name="FossTitle" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_right = 970.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 6 )
text = "Free & Open Source"
align = 1
valign = 1

[node name="FossLabel" type="RichTextLabel" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 970.0
margin_bottom = 101.0
theme = SubResource( 7 )
custom_colors/default_color = Color( 0.0352941, 0.113725, 0.278431, 1 )
bbcode_enabled = true
bbcode_text = "[center]The code for Dudelings: Arcade Sportsball is now free & open source! [url=https://heavyelement.com/products/dudelings/code]You can
check out the code here.[/url][/center]"
text = "The code for Dudelings: Arcade Sportsball is now free & open source! You can
check out the code here."
fit_content_height = true

[node name="Spacer15" type="Control" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 970.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 20 )

[node name="DemoTitle" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 970.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 6 )
text = "Dudelings: The Demo"
align = 1
valign = 1

[node name="DemoDescription" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 970.0
margin_bottom = 240.0
text = "Dudelings: Arcade Sportsball now has a demo! Make sure you tell you
friends about the game and the free sample!"
align = 1
valign = 1

[node name="Spacer16" type="Control" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 970.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 20 )

[node name="ChangesTitle" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 970.0
margin_bottom = 315.0
custom_fonts/font = ExtResource( 6 )
text = "Changes"
align = 1
valign = 1

[node name="ChangesDescription" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_top = 323.0
margin_right = 970.0
margin_bottom = 689.0
text = "• Reorganized game assets to simplify the process of
exporting them into the FOSS build of the game
• Made some upgrades to the game's assets to reduce
overall download/disk usage size
• Added a link to our new Revolt server on the Main Menu
• Changed all links & references to our new canonical 
domain name: heavyelement.com
• Made some changes to the underlying code to unify
the demo and retail codebase as much as possible
• Backported some space-saving features of the Android
build to the main branch.
• Backported virtual gamepad to the main branch"
align = 1
valign = 1

[node name="Spacer17" type="Control" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_top = 697.0
margin_right = 970.0
margin_bottom = 717.0
rect_min_size = Vector2( 0, 20 )

[node name="BugFixes" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_top = 725.0
margin_right = 970.0
margin_bottom = 764.0
custom_fonts/font = ExtResource( 6 )
text = "Bug Fixes"
align = 1
valign = 1

[node name="BugFixesDescription" type="Label" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
margin_top = 772.0
margin_right = 970.0
margin_bottom = 1107.0
text = "• Fixed instances where  game would randomly fail to launch on Intel
 graphics under Linux operating systems
• Fixed a glitch where the ball could get stuck between the left- or right-
most Dudeling and get placed out of bounds
• Fixed an issue with unlocking \"Destination\" map where criteria
was met, but the map didn't unlock until the game was restarted
• Fixed a visual glitch where labels for CheckButtons would disappear
when in a hover state (thanks moocow1452)
• Fixed an issue where requests to the news endpoint failed silently
• Improved error handling for new news items on the Main Menu and
in the What's New submenu"
align = 1
valign = 1

[node name="AnnouncementLabel" type="RichTextLabel" parent="BackgroundPanel/MenuContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 1084.0
margin_right = 970.0
margin_bottom = 1111.0
focus_mode = 2
theme = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0.0470588, 0.301961, 1 )
bbcode_enabled = true
bbcode_text = "Placeholder text"
text = "Placeholder text"
fit_content_height = true
selection_enabled = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
